--- a/src/index.html
+++ b/src/index.html
@@ -8,34 +8,23 @@
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="hold-transition sidebar-mini layout-fixed">
+<body >
     <div class="wrapper">
         <app-root></app-root>
     </div>
 
-
-
     <!-- jQuery -->
     <script src="./assets/plugins/jquery/jquery.min.js"></script>
-    <!-- jQuery UI 1.11.4 -->
-    <!--<script src="./assets/plugins/jquery-ui/jquery-ui.min.js"></script>-->
-    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
-        //$.widget.bridge('uibutton', $.ui.button)
     </script>
     <!-- Bootstrap 4 -->
     <script src="./assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- ChartJS -->
-    <!--<script src="./assets/plugins/chart.js/Chart.min.js"></script>-->
-    <!-- Sparkline -->
-    <!--<script src="./assets/plugins/sparklines/sparkline.js"></script>-->
 
     <!-- jQuery Knob Chart -->
     <script src="./assets/plugins/jquery-knob/jquery.knob.min.js"></script>
